--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,93 @@
 {
-    "Lua.diagnostics.disable": [
-        "undefined-global"
+    "Lua.diagnostics.globals": [
+        "CHAT_SYSTEM",
+        "LibAddonMenu2",
+        "GetEventManager",
+        "EVENT_ADD_ON_LOADED",
+        "ZO_SavedVars",
+        "EVENT_ACTIVITY_FINDER_STATUS_UPDATE",
+        "EVENT_PLAYER_ACTIVATED",
+        "BAG_BACKPACK",
+        "SHARED_INVENTORY",
+        "GetBagSize",
+        "GetNextAntiquityId",
+        "GetAntiquityLeadTimeRemainingSeconds",
+        "GetZoneNameById",
+        "GetAntiquityZoneId",
+        "HasLFGReadyCheckNotification",
+        "AcceptLFGReadyCheckNotification",
+        "ACTIVITY_FINDER_STATUS_READY_CHECK",
+        "FindFirstEmptySlotInBag",
+        "GetItemName",
+        "IsProtectedFunction",
+        "CallSecureProtected",
+        "UseItem",
+        "SetItemIsJunk",
+        "CanItemBeMarkedAsJunk",
+        "IsItemJunk",
+        "EVENT_INVENTORY_SINGLE_SLOT_UPDATE",
+        "GetItemType",
+        "ITEMTYPE_WEAPON",
+        "ITEMTYPE_ARMOR",
+        "GetItemTrait",
+        "ITEMTYPE_TREASURE",
+        "ITEM_TRAIT_TYPE_WEAPON_ORNATE",
+        "ITEMTYPE_TRASH",
+        "ITEM_TRAIT_TYPE_ARMOR_ORNATE",
+        "ITEM_TRAIT_TYPE_JEWELRY_ORNATE",
+        "REGISTER_FILTER_BAG_ID",
+        "EVENT_OPEN_STORE",
+        "HasAnyJunk",
+        "DoesItemHaveDurability",
+        "GetItemCondition",
+        "RepairItemWithRepairKit",
+        "SellAllJunk",
+        "GetChargeInfoForItem",
+        "IsItemChargeable",
+        "ChargeItemWithSoulGem",
+        "BAG_WORN",
+        "REGISTER_FILTER_INVENTORY_UPDATE_REASON",
+        "INVENTORY_UPDATE_REASON_ITEM_CHARGE",
+        "LootAll",
+        "ZO_PreHook",
+        "SYSTEMS",
+        "INVENTORY_UPDATE_REASON_DURABILITY_CHANGE",
+        "BAG_BANK",
+        "IsESOPlusSubscriber",
+        "BAG_SUBSCRIBER_BANK",
+        "GetItemLink",
+        "RequestMoveItem",
+        "GetItemId",
+        "StackBag",
+        "CURRENCY_LOCATION_CHARACTER",
+        "GetCurrencyAmount",
+        "TransferCurrency",
+        "CURT_ALLIANCE_POINTS",
+        "CURT_MONEY",
+        "CURRENCY_LOCATION_BANK",
+        "EVENT_OPEN_BANK",
+        "CURT_TELVAR_STONES",
+        "ITEMTYPE_GLYPH_ARMOR",
+        "ITEMTYPE_GLYPH_JEWELRY",
+        "ITEMTYPE_GLYPH_WEAPON",
+        "GetUnitClassId",
+        "AurasContainer",
+        "SCENE_SHOWN",
+        "IsUnitInCombat",
+        "EVENT_EFFECT_CHANGED",
+        "REGISTER_FILTER_SOURCE_COMBAT_UNIT_TYPE",
+        "REGISTER_FILTER_ABILITY_ID",
+        "COMBAT_UNIT_TYPE_PLAYER",
+        "EFFECT_RESULT_FADED",
+        "BOTTOMLEFT",
+        "GuiRoot",
+        "CENTER",
+        "CT_TEXTURE",
+        "GetWindowManager",
+        "SCENE_MANAGER",
+        "GetNumBuffs",
+        "IsItemUsable",
+        "GetUnitBuffInfo",
+        "ITEMTYPE_JEWELRY"
     ]
 }
